// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Relationships from legacy app should render dashboards normally 1`] = `
<EuiFlyout
  onClose={[MockFunction]}
>
  <EuiFlyoutHeader
    hasBorder={true}
  >
    <EuiTitle
      className="eui-textBreakWord"
      size="m"
    >
      <h2>
        MyDashboard
      </h2>
    </EuiTitle>
  </EuiFlyoutHeader>
  <EuiFlyoutBody>
    <div>
      <EuiCallOut>
        <p>
          Here are the saved objects related to MyDashboard. Deleting this dashboard affects its parent objects, but not its children.
        </p>
      </EuiCallOut>
      <EuiSpacer />
      <EuiInMemoryTable
        columns={
          Array [
            Object {
              "align": "center",
              "description": "Type of the saved object",
              "field": "type",
              "name": "Type",
              "render": [Function],
              "sortable": false,
              "width": "50px",
            },
            Object {
              "data-test-subj": "directRelationship",
              "dataType": "string",
              "field": "relationship",
              "name": "Direct relationship",
              "render": [Function],
              "sortable": false,
              "width": "125px",
            },
            Object {
              "dataType": "string",
              "description": "Title of the saved object",
              "field": "meta.title",
              "name": "Title",
              "render": [Function],
              "sortable": false,
            },
            Object {
              "actions": Array [
                Object {
                  "available": [Function],
                  "data-test-subj": "relationshipsTableAction-inspect",
                  "description": "Inspect this saved object",
                  "icon": "inspect",
                  "name": "Inspect",
                  "onClick": [Function],
                  "type": "icon",
                },
              ],
              "name": "Actions",
            },
          ]
        }
        items={
          Array [
            Object {
              "id": "1",
              "meta": Object {
                "editUrl": "/management/kibana/objects/savedVisualizations/1",
                "icon": "visualizeApp",
                "inAppUrl": Object {
                  "path": "/app/visualize#/edit/1",
                  "uiCapabilitiesPath": "visualize.show",
                },
                "title": "My Visualization Title 1",
              },
              "relationship": "child",
              "type": "visualization",
            },
            Object {
              "id": "2",
              "meta": Object {
                "editUrl": "/management/kibana/objects/savedVisualizations/2",
                "icon": "visualizeApp",
                "inAppUrl": Object {
                  "path": "/app/visualize#/edit/2",
                  "uiCapabilitiesPath": "visualize.show",
                },
                "title": "My Visualization Title 2",
              },
              "relationship": "child",
              "type": "visualization",
            },
          ]
        }
        pagination={true}
        responsive={true}
        rowProps={[Function]}
        search={
          Object {
            "filters": Array [
              Object {
                "field": "relationship",
                "multiSelect": "or",
                "name": "Direct relationship",
                "options": Array [
                  Object {
                    "name": "parent",
                    "value": "parent",
                    "view": "Parent",
                  },
                  Object {
                    "name": "child",
                    "value": "child",
                    "view": "Child",
                  },
                ],
                "type": "field_value_selection",
              },
              Object {
                "field": "type",
                "multiSelect": "or",
                "name": "Type",
                "options": Array [
                  Object {
                    "name": "visualization",
                    "value": "visualization",
                    "view": "visualization",
                  },
                ],
                "type": "field_value_selection",
              },
            ],
          }
        }
        tableLayout="fixed"
      />
    </div>
  </EuiFlyoutBody>
</EuiFlyout>
`;

exports[`Relationships from legacy app should render errors 1`] = `
<EuiFlyout
  onClose={[MockFunction]}
>
  <EuiFlyoutHeader
    hasBorder={true}
  >
    <EuiTitle
      className="eui-textBreakWord"
      size="m"
    >
      <h2>
        MyDashboard
      </h2>
    </EuiTitle>
  </EuiFlyoutHeader>
  <EuiFlyoutBody>
    <EuiCallOut
      color="danger"
      title={
        <FormattedMessage
          defaultMessage="Error"
          id="savedObjectsManagement.objectsTable.relationships.renderErrorMessage"
          values={Object {}}
        />
      }
    >
      <p>
        foo
      </p>
    </EuiCallOut>
  </EuiFlyoutBody>
</EuiFlyout>
`;

exports[`Relationships from legacy app should render index patterns normally 1`] = `
<EuiFlyout
  onClose={[MockFunction]}
>
  <EuiFlyoutHeader
    hasBorder={true}
  >
    <EuiTitle
      className="eui-textBreakWord"
      size="m"
    >
      <h2>
        MyIndexPattern*
      </h2>
    </EuiTitle>
  </EuiFlyoutHeader>
  <EuiFlyoutBody>
    <div>
      <EuiCallOut>
        <p>
          Here are the saved objects related to MyIndexPattern*. Deleting this index-pattern affects its parent objects, but not its children.
        </p>
      </EuiCallOut>
      <EuiSpacer />
      <EuiInMemoryTable
        columns={
          Array [
            Object {
              "align": "center",
              "description": "Type of the saved object",
              "field": "type",
              "name": "Type",
              "render": [Function],
              "sortable": false,
              "width": "50px",
            },
            Object {
              "data-test-subj": "directRelationship",
              "dataType": "string",
              "field": "relationship",
              "name": "Direct relationship",
              "render": [Function],
              "sortable": false,
              "width": "125px",
            },
            Object {
              "dataType": "string",
              "description": "Title of the saved object",
              "field": "meta.title",
              "name": "Title",
              "render": [Function],
              "sortable": false,
            },
            Object {
              "actions": Array [
                Object {
                  "available": [Function],
                  "data-test-subj": "relationshipsTableAction-inspect",
                  "description": "Inspect this saved object",
                  "icon": "inspect",
                  "name": "Inspect",
                  "onClick": [Function],
                  "type": "icon",
                },
              ],
              "name": "Actions",
            },
          ]
        }
        items={
          Array [
            Object {
              "id": "1",
              "meta": Object {
                "editUrl": "/management/kibana/objects/savedSearches/1",
                "icon": "search",
                "inAppUrl": Object {
                  "path": "/app/discover#//1",
                  "uiCapabilitiesPath": "discover.show",
                },
                "title": "My Search Title",
              },
              "relationship": "parent",
              "type": "search",
            },
            Object {
              "id": "2",
              "meta": Object {
                "editUrl": "/management/kibana/objects/savedVisualizations/2",
                "icon": "visualizeApp",
                "inAppUrl": Object {
                  "path": "/app/visualize#/edit/2",
                  "uiCapabilitiesPath": "visualize.show",
                },
                "title": "My Visualization Title",
              },
              "relationship": "parent",
              "type": "visualization",
            },
          ]
        }
        pagination={true}
        responsive={true}
        rowProps={[Function]}
        search={
          Object {
            "filters": Array [
              Object {
                "field": "relationship",
                "multiSelect": "or",
                "name": "Direct relationship",
                "options": Array [
                  Object {
                    "name": "parent",
                    "value": "parent",
                    "view": "Parent",
                  },
                  Object {
                    "name": "child",
                    "value": "child",
                    "view": "Child",
                  },
                ],
                "type": "field_value_selection",
              },
              Object {
                "field": "type",
                "multiSelect": "or",
                "name": "Type",
                "options": Array [
                  Object {
                    "name": "search",
                    "value": "search",
                    "view": "search",
                  },
                  Object {
                    "name": "visualization",
                    "value": "visualization",
                    "view": "visualization",
                  },
                ],
                "type": "field_value_selection",
              },
            ],
          }
        }
        tableLayout="fixed"
      />
    </div>
  </EuiFlyoutBody>
</EuiFlyout>
`;

exports[`Relationships from legacy app should render searches normally 1`] = `
<EuiFlyout
  onClose={[MockFunction]}
>
  <EuiFlyoutHeader
    hasBorder={true}
  >
    <EuiTitle
      className="eui-textBreakWord"
      size="m"
    >
      <h2>
        MySearch
      </h2>
    </EuiTitle>
  </EuiFlyoutHeader>
  <EuiFlyoutBody>
    <div>
      <EuiCallOut>
        <p>
          Here are the saved objects related to MySearch. Deleting this search affects its parent objects, but not its children.
        </p>
      </EuiCallOut>
      <EuiSpacer />
      <EuiInMemoryTable
        columns={
          Array [
            Object {
              "align": "center",
              "description": "Type of the saved object",
              "field": "type",
              "name": "Type",
              "render": [Function],
              "sortable": false,
              "width": "50px",
            },
            Object {
              "data-test-subj": "directRelationship",
              "dataType": "string",
              "field": "relationship",
              "name": "Direct relationship",
              "render": [Function],
              "sortable": false,
              "width": "125px",
            },
            Object {
              "dataType": "string",
              "description": "Title of the saved object",
              "field": "meta.title",
              "name": "Title",
              "render": [Function],
              "sortable": false,
            },
            Object {
              "actions": Array [
                Object {
                  "available": [Function],
                  "data-test-subj": "relationshipsTableAction-inspect",
                  "description": "Inspect this saved object",
                  "icon": "inspect",
                  "name": "Inspect",
                  "onClick": [Function],
                  "type": "icon",
                },
              ],
              "name": "Actions",
            },
          ]
        }
        items={
          Array [
            Object {
              "id": "1",
              "meta": Object {
                "editUrl": "/management/kibana/indexPatterns/patterns/1",
                "icon": "indexPatternApp",
                "inAppUrl": Object {
                  "path": "/app/management/kibana/indexPatterns/patterns/1",
                  "uiCapabilitiesPath": "management.opensearchDashboards.indexPatterns",
                },
                "title": "My Index Pattern",
              },
              "relationship": "child",
              "type": "index-pattern",
            },
            Object {
              "id": "2",
              "meta": Object {
                "editUrl": "/management/kibana/objects/savedVisualizations/2",
                "icon": "visualizeApp",
                "inAppUrl": Object {
                  "path": "/app/visualize#/edit/2",
                  "uiCapabilitiesPath": "visualize.show",
                },
                "title": "My Visualization Title",
              },
              "relationship": "parent",
              "type": "visualization",
            },
          ]
        }
        pagination={true}
        responsive={true}
        rowProps={[Function]}
        search={
          Object {
            "filters": Array [
              Object {
                "field": "relationship",
                "multiSelect": "or",
                "name": "Direct relationship",
                "options": Array [
                  Object {
                    "name": "parent",
                    "value": "parent",
                    "view": "Parent",
                  },
                  Object {
                    "name": "child",
                    "value": "child",
                    "view": "Child",
                  },
                ],
                "type": "field_value_selection",
              },
              Object {
                "field": "type",
                "multiSelect": "or",
                "name": "Type",
                "options": Array [
                  Object {
                    "name": "index-pattern",
                    "value": "index-pattern",
                    "view": "index-pattern",
                  },
                  Object {
                    "name": "visualization",
                    "value": "visualization",
                    "view": "visualization",
                  },
                ],
                "type": "field_value_selection",
              },
            ],
          }
        }
        tableLayout="fixed"
      />
    </div>
  </EuiFlyoutBody>
</EuiFlyout>
`;

exports[`Relationships from legacy app should render visualizations normally 1`] = `
<EuiFlyout
  onClose={[MockFunction]}
>
  <EuiFlyoutHeader
    hasBorder={true}
  >
    <EuiTitle
      className="eui-textBreakWord"
      size="m"
    >
      <h2>
        MyViz
      </h2>
    </EuiTitle>
  </EuiFlyoutHeader>
  <EuiFlyoutBody>
    <div>
      <EuiCallOut>
        <p>
          Here are the saved objects related to MyViz. Deleting this visualization affects its parent objects, but not its children.
        </p>
      </EuiCallOut>
      <EuiSpacer />
      <EuiInMemoryTable
        columns={
          Array [
            Object {
              "align": "center",
              "description": "Type of the saved object",
              "field": "type",
              "name": "Type",
              "render": [Function],
              "sortable": false,
              "width": "50px",
            },
            Object {
              "data-test-subj": "directRelationship",
              "dataType": "string",
              "field": "relationship",
              "name": "Direct relationship",
              "render": [Function],
              "sortable": false,
              "width": "125px",
            },
            Object {
              "dataType": "string",
              "description": "Title of the saved object",
              "field": "meta.title",
              "name": "Title",
              "render": [Function],
              "sortable": false,
            },
            Object {
              "actions": Array [
                Object {
                  "available": [Function],
                  "data-test-subj": "relationshipsTableAction-inspect",
                  "description": "Inspect this saved object",
                  "icon": "inspect",
                  "name": "Inspect",
                  "onClick": [Function],
                  "type": "icon",
                },
              ],
              "name": "Actions",
            },
          ]
        }
        items={
          Array [
            Object {
              "id": "1",
              "meta": Object {
                "editUrl": "/management/kibana/objects/savedDashboards/1",
                "icon": "dashboardApp",
                "inAppUrl": Object {
                  "path": "/app/kibana#/dashboard/1",
                  "uiCapabilitiesPath": "dashboard.show",
                },
                "title": "My Dashboard 1",
              },
              "relationship": "parent",
              "type": "dashboard",
            },
            Object {
              "id": "2",
              "meta": Object {
                "editUrl": "/management/kibana/objects/savedDashboards/2",
                "icon": "dashboardApp",
                "inAppUrl": Object {
                  "path": "/app/kibana#/dashboard/2",
                  "uiCapabilitiesPath": "dashboard.show",
                },
                "title": "My Dashboard 2",
              },
              "relationship": "parent",
              "type": "dashboard",
            },
          ]
        }
        pagination={true}
        responsive={true}
        rowProps={[Function]}
        search={
          Object {
            "filters": Array [
              Object {
                "field": "relationship",
                "multiSelect": "or",
                "name": "Direct relationship",
                "options": Array [
                  Object {
                    "name": "parent",
                    "value": "parent",
                    "view": "Parent",
                  },
                  Object {
                    "name": "child",
                    "value": "child",
                    "view": "Child",
                  },
                ],
                "type": "field_value_selection",
              },
              Object {
                "field": "type",
                "multiSelect": "or",
                "name": "Type",
                "options": Array [
                  Object {
                    "name": "dashboard",
                    "value": "dashboard",
                    "view": "dashboard",
                  },
                ],
                "type": "field_value_selection",
              },
            ],
          }
        }
        tableLayout="fixed"
      />
    </div>
  </EuiFlyoutBody>
</EuiFlyout>
`;

exports[`Relationships should render augment-vis objects normally 1`] = `
<EuiFlyout
  onClose={[MockFunction]}
>
  <EuiFlyoutHeader
    hasBorder={true}
  >
    <EuiTitle
      className="eui-textBreakWord"
      size="m"
    >
      <h2>
        MyAugmentVisObject
      </h2>
    </EuiTitle>
  </EuiFlyoutHeader>
  <EuiFlyoutBody>
    <div>
      <EuiCallOut>
        <p>
          Here are the saved objects related to MyAugmentVisObject. Deleting this augment-vis affects its parent objects, but not its children.
        </p>
      </EuiCallOut>
      <EuiSpacer />
      <EuiInMemoryTable
        columns={
          Array [
            Object {
              "align": "center",
              "description": "Type of the saved object",
              "field": "type",
              "name": "Type",
              "render": [Function],
              "sortable": false,
              "width": "50px",
            },
            Object {
              "data-test-subj": "directRelationship",
              "dataType": "string",
              "field": "relationship",
              "name": "Direct relationship",
              "render": [Function],
              "sortable": false,
              "width": "125px",
            },
            Object {
              "dataType": "string",
              "description": "Title of the saved object",
              "field": "meta.title",
              "name": "Title",
              "render": [Function],
              "sortable": false,
            },
            Object {
              "actions": Array [
                Object {
                  "available": [Function],
                  "data-test-subj": "relationshipsTableAction-inspect",
                  "description": "Inspect this saved object",
                  "icon": "inspect",
                  "name": "Inspect",
                  "onClick": [Function],
                  "type": "icon",
                },
              ],
              "name": "Actions",
            },
          ]
        }
        items={
          Array [
            Object {
              "id": "1",
              "meta": Object {
                "editUrl": "/management/opensearch-dashboards/objects/savedVisualizations/1",
                "icon": "visualizeApp",
                "inAppUrl": Object {
                  "path": "/edit/1",
                  "uiCapabilitiesPath": "visualize.show",
                },
                "title": "MyViz",
              },
              "relationship": "child",
              "type": "visualization",
            },
          ]
        }
        pagination={true}
        responsive={true}
        rowProps={[Function]}
        search={
          Object {
            "filters": Array [
              Object {
                "field": "relationship",
                "multiSelect": "or",
                "name": "Direct relationship",
                "options": Array [
                  Object {
                    "name": "parent",
                    "value": "parent",
                    "view": "Parent",
                  },
                  Object {
                    "name": "child",
                    "value": "child",
                    "view": "Child",
                  },
                ],
                "type": "field_value_selection",
              },
              Object {
                "field": "type",
                "multiSelect": "or",
                "name": "Type",
                "options": Array [
                  Object {
                    "name": "visualization",
                    "value": "visualization",
                    "view": "visualization",
                  },
                ],
                "type": "field_value_selection",
              },
            ],
          }
        }
        tableLayout="fixed"
      />
    </div>
  </EuiFlyoutBody>
</EuiFlyout>
`;

exports[`Relationships should render dashboards normally 1`] = `
<EuiFlyout
  onClose={[MockFunction]}
>
  <EuiFlyoutHeader
    hasBorder={true}
  >
    <EuiTitle
      className="eui-textBreakWord"
      size="m"
    >
      <h2>
        MyDashboard
      </h2>
    </EuiTitle>
  </EuiFlyoutHeader>
  <EuiFlyoutBody>
    <div>
      <EuiCallOut>
        <p>
          Here are the saved objects related to MyDashboard. Deleting this dashboard affects its parent objects, but not its children.
        </p>
      </EuiCallOut>
      <EuiSpacer />
      <EuiInMemoryTable
        columns={
          Array [
            Object {
              "align": "center",
              "description": "Type of the saved object",
              "field": "type",
              "name": "Type",
              "render": [Function],
              "sortable": false,
              "width": "50px",
            },
            Object {
              "data-test-subj": "directRelationship",
              "dataType": "string",
              "field": "relationship",
              "name": "Direct relationship",
              "render": [Function],
              "sortable": false,
              "width": "125px",
            },
            Object {
              "dataType": "string",
              "description": "Title of the saved object",
              "field": "meta.title",
              "name": "Title",
              "render": [Function],
              "sortable": false,
            },
            Object {
              "actions": Array [
                Object {
                  "available": [Function],
                  "data-test-subj": "relationshipsTableAction-inspect",
                  "description": "Inspect this saved object",
                  "icon": "inspect",
                  "name": "Inspect",
                  "onClick": [Function],
                  "type": "icon",
                },
              ],
              "name": "Actions",
            },
          ]
        }
        items={
          Array [
            Object {
              "id": "1",
              "meta": Object {
                "editUrl": "/management/opensearch-dashboards/objects/savedVisualizations/1",
                "icon": "visualizeApp",
                "inAppUrl": Object {
                  "path": "/app/visualize#/edit/1",
                  "uiCapabilitiesPath": "visualize.show",
                },
                "title": "My Visualization Title 1",
              },
              "relationship": "child",
              "type": "visualization",
            },
            Object {
              "id": "2",
              "meta": Object {
                "editUrl": "/management/opensearch-dashboards/objects/savedVisualizations/2",
                "icon": "visualizeApp",
                "inAppUrl": Object {
                  "path": "/app/visualize#/edit/2",
                  "uiCapabilitiesPath": "visualize.show",
                },
                "title": "My Visualization Title 2",
              },
              "relationship": "child",
              "type": "visualization",
            },
          ]
        }
        pagination={true}
        responsive={true}
        rowProps={[Function]}
        search={
          Object {
            "filters": Array [
              Object {
                "field": "relationship",
                "multiSelect": "or",
                "name": "Direct relationship",
                "options": Array [
                  Object {
                    "name": "parent",
                    "value": "parent",
                    "view": "Parent",
                  },
                  Object {
                    "name": "child",
                    "value": "child",
                    "view": "Child",
                  },
                ],
                "type": "field_value_selection",
              },
              Object {
                "field": "type",
                "multiSelect": "or",
                "name": "Type",
                "options": Array [
                  Object {
                    "name": "visualization",
                    "value": "visualization",
                    "view": "visualization",
                  },
                ],
                "type": "field_value_selection",
              },
            ],
          }
        }
        tableLayout="fixed"
      />
    </div>
  </EuiFlyoutBody>
</EuiFlyout>
`;

exports[`Relationships should render errors 1`] = `
<EuiFlyout
  onClose={[MockFunction]}
>
  <EuiFlyoutHeader
    hasBorder={true}
  >
    <EuiTitle
      className="eui-textBreakWord"
      size="m"
    >
      <h2>
        MyDashboard
      </h2>
    </EuiTitle>
  </EuiFlyoutHeader>
  <EuiFlyoutBody>
    <EuiCallOut
      color="danger"
      title={
        <FormattedMessage
          defaultMessage="Error"
          id="savedObjectsManagement.objectsTable.relationships.renderErrorMessage"
          values={Object {}}
        />
      }
    >
      <p>
        foo
      </p>
    </EuiCallOut>
  </EuiFlyoutBody>
</EuiFlyout>
`;

exports[`Relationships should render index patterns normally 1`] = `
<EuiFlyout
  onClose={[MockFunction]}
>
  <EuiFlyoutHeader
    hasBorder={true}
  >
    <EuiTitle
      className="eui-textBreakWord"
      size="m"
    >
      <h2>
        MyIndexPattern*
      </h2>
    </EuiTitle>
  </EuiFlyoutHeader>
  <EuiFlyoutBody>
    <div>
      <EuiCallOut>
        <p>
          Here are the saved objects related to MyIndexPattern*. Deleting this index-pattern affects its parent objects, but not its children.
        </p>
      </EuiCallOut>
      <EuiSpacer />
      <EuiInMemoryTable
        columns={
          Array [
            Object {
              "align": "center",
              "description": "Type of the saved object",
              "field": "type",
              "name": "Type",
              "render": [Function],
              "sortable": false,
              "width": "50px",
            },
            Object {
              "data-test-subj": "directRelationship",
              "dataType": "string",
              "field": "relationship",
              "name": "Direct relationship",
              "render": [Function],
              "sortable": false,
              "width": "125px",
            },
            Object {
              "dataType": "string",
              "description": "Title of the saved object",
              "field": "meta.title",
              "name": "Title",
              "render": [Function],
              "sortable": false,
            },
            Object {
              "actions": Array [
                Object {
                  "available": [Function],
                  "data-test-subj": "relationshipsTableAction-inspect",
                  "description": "Inspect this saved object",
                  "icon": "inspect",
                  "name": "Inspect",
                  "onClick": [Function],
                  "type": "icon",
                },
              ],
              "name": "Actions",
            },
          ]
        }
        items={
          Array [
            Object {
              "id": "1",
              "meta": Object {
                "editUrl": "/management/opensearch-dashboards/objects/savedSearches/1",
                "icon": "search",
                "inAppUrl": Object {
                  "path": "/app/discover#//1",
                  "uiCapabilitiesPath": "discover.show",
                },
                "title": "My Search Title",
              },
              "relationship": "parent",
              "type": "search",
            },
            Object {
              "id": "2",
              "meta": Object {
                "editUrl": "/management/opensearch-dashboards/objects/savedVisualizations/2",
                "icon": "visualizeApp",
                "inAppUrl": Object {
                  "path": "/app/visualize#/edit/2",
                  "uiCapabilitiesPath": "visualize.show",
                },
                "title": "My Visualization Title",
              },
              "relationship": "parent",
              "type": "visualization",
            },
          ]
        }
        pagination={true}
        responsive={true}
        rowProps={[Function]}
        search={
          Object {
            "filters": Array [
              Object {
                "field": "relationship",
                "multiSelect": "or",
                "name": "Direct relationship",
                "options": Array [
                  Object {
                    "name": "parent",
                    "value": "parent",
                    "view": "Parent",
                  },
                  Object {
                    "name": "child",
                    "value": "child",
                    "view": "Child",
                  },
                ],
                "type": "field_value_selection",
              },
              Object {
                "field": "type",
                "multiSelect": "or",
                "name": "Type",
                "options": Array [
                  Object {
                    "name": "search",
                    "value": "search",
                    "view": "search",
                  },
                  Object {
                    "name": "visualization",
                    "value": "visualization",
                    "view": "visualization",
                  },
                ],
                "type": "field_value_selection",
              },
            ],
          }
        }
        tableLayout="fixed"
      />
    </div>
  </EuiFlyoutBody>
</EuiFlyout>
`;

exports[`Relationships should render searches normally 1`] = `
<EuiFlyout
  onClose={[MockFunction]}
>
  <EuiFlyoutHeader
    hasBorder={true}
  >
    <EuiTitle
      className="eui-textBreakWord"
      size="m"
    >
      <h2>
        MySearch
      </h2>
    </EuiTitle>
  </EuiFlyoutHeader>
  <EuiFlyoutBody>
    <div>
      <EuiCallOut>
        <p>
          Here are the saved objects related to MySearch. Deleting this search affects its parent objects, but not its children.
        </p>
      </EuiCallOut>
      <EuiSpacer />
      <EuiInMemoryTable
        columns={
          Array [
            Object {
              "align": "center",
              "description": "Type of the saved object",
              "field": "type",
              "name": "Type",
              "render": [Function],
              "sortable": false,
              "width": "50px",
            },
            Object {
              "data-test-subj": "directRelationship",
              "dataType": "string",
              "field": "relationship",
              "name": "Direct relationship",
              "render": [Function],
              "sortable": false,
              "width": "125px",
            },
            Object {
              "dataType": "string",
              "description": "Title of the saved object",
              "field": "meta.title",
              "name": "Title",
              "render": [Function],
              "sortable": false,
            },
            Object {
              "actions": Array [
                Object {
                  "available": [Function],
                  "data-test-subj": "relationshipsTableAction-inspect",
                  "description": "Inspect this saved object",
                  "icon": "inspect",
                  "name": "Inspect",
                  "onClick": [Function],
                  "type": "icon",
                },
              ],
              "name": "Actions",
            },
          ]
        }
        items={
          Array [
            Object {
              "id": "1",
              "meta": Object {
                "editUrl": "/management/opensearch-dashboards/indexPatterns/patterns/1",
                "icon": "indexPatternApp",
                "inAppUrl": Object {
                  "path": "/app/management/opensearch-dashboards/indexPatterns/patterns/1",
                  "uiCapabilitiesPath": "management.opensearchDashboards.indexPatterns",
                },
                "title": "My Index Pattern",
              },
              "relationship": "child",
              "type": "index-pattern",
            },
            Object {
              "id": "2",
              "meta": Object {
                "editUrl": "/management/opensearch-dashboards/objects/savedVisualizations/2",
                "icon": "visualizeApp",
                "inAppUrl": Object {
                  "path": "/app/visualize#/edit/2",
                  "uiCapabilitiesPath": "visualize.show",
                },
                "title": "My Visualization Title",
              },
              "relationship": "parent",
              "type": "visualization",
            },
          ]
        }
        pagination={true}
        responsive={true}
        rowProps={[Function]}
        search={
          Object {
            "filters": Array [
              Object {
                "field": "relationship",
                "multiSelect": "or",
                "name": "Direct relationship",
                "options": Array [
                  Object {
                    "name": "parent",
                    "value": "parent",
                    "view": "Parent",
                  },
                  Object {
                    "name": "child",
                    "value": "child",
                    "view": "Child",
                  },
                ],
                "type": "field_value_selection",
              },
              Object {
                "field": "type",
                "multiSelect": "or",
                "name": "Type",
                "options": Array [
                  Object {
                    "name": "index-pattern",
                    "value": "index-pattern",
                    "view": "index-pattern",
                  },
                  Object {
                    "name": "visualization",
                    "value": "visualization",
                    "view": "visualization",
                  },
                ],
                "type": "field_value_selection",
              },
            ],
          }
        }
        tableLayout="fixed"
      />
    </div>
  </EuiFlyoutBody>
</EuiFlyout>
`;

exports[`Relationships should render visualizations normally 1`] = `
<EuiFlyout
  onClose={[MockFunction]}
>
  <EuiFlyoutHeader
    hasBorder={true}
  >
    <EuiTitle
      className="eui-textBreakWord"
      size="m"
    >
      <h2>
        MyViz
      </h2>
    </EuiTitle>
  </EuiFlyoutHeader>
  <EuiFlyoutBody>
    <div>
      <EuiCallOut>
        <p>
          Here are the saved objects related to MyViz. Deleting this visualization affects its parent objects, but not its children.
        </p>
      </EuiCallOut>
      <EuiSpacer />
      <EuiInMemoryTable
        columns={
          Array [
            Object {
              "align": "center",
              "description": "Type of the saved object",
              "field": "type",
              "name": "Type",
              "render": [Function],
              "sortable": false,
              "width": "50px",
            },
            Object {
              "data-test-subj": "directRelationship",
              "dataType": "string",
              "field": "relationship",
              "name": "Direct relationship",
              "render": [Function],
              "sortable": false,
              "width": "125px",
            },
            Object {
              "dataType": "string",
              "description": "Title of the saved object",
              "field": "meta.title",
              "name": "Title",
              "render": [Function],
              "sortable": false,
            },
            Object {
              "actions": Array [
                Object {
                  "available": [Function],
                  "data-test-subj": "relationshipsTableAction-inspect",
                  "description": "Inspect this saved object",
                  "icon": "inspect",
                  "name": "Inspect",
                  "onClick": [Function],
                  "type": "icon",
                },
              ],
              "name": "Actions",
            },
          ]
        }
        items={
          Array [
            Object {
              "id": "1",
              "meta": Object {
                "editUrl": "/management/opensearch-dashboards/objects/savedDashboards/1",
                "icon": "dashboardApp",
                "inAppUrl": Object {
                  "path": "/app/opensearch-dashboards#/dashboard/1",
                  "uiCapabilitiesPath": "dashboard.show",
                },
                "title": "My Dashboard 1",
              },
              "relationship": "parent",
              "type": "dashboard",
            },
            Object {
              "id": "2",
              "meta": Object {
                "editUrl": "/management/opensearch-dashboards/objects/savedDashboards/2",
                "icon": "dashboardApp",
                "inAppUrl": Object {
                  "path": "/app/opensearch-dashboards#/dashboard/2",
                  "uiCapabilitiesPath": "dashboard.show",
                },
                "title": "My Dashboard 2",
              },
              "relationship": "parent",
              "type": "dashboard",
            },
          ]
        }
        pagination={true}
        responsive={true}
        rowProps={[Function]}
        search={
          Object {
            "filters": Array [
              Object {
                "field": "relationship",
                "multiSelect": "or",
                "name": "Direct relationship",
                "options": Array [
                  Object {
                    "name": "parent",
                    "value": "parent",
                    "view": "Parent",
                  },
                  Object {
                    "name": "child",
                    "value": "child",
                    "view": "Child",
                  },
                ],
                "type": "field_value_selection",
              },
              Object {
                "field": "type",
                "multiSelect": "or",
                "name": "Type",
                "options": Array [
                  Object {
                    "name": "dashboard",
                    "value": "dashboard",
                    "view": "dashboard",
                  },
                ],
                "type": "field_value_selection",
              },
            ],
          }
        }
        tableLayout="fixed"
      />
    </div>
  </EuiFlyoutBody>
</EuiFlyout>
`;
